Add separate functions.sh and use it
Ignore-this: f060626c68d19ae7c2db704a2165832d

darcs-hash:d42083edb80e9c4cce9c8fab26a729223de17442

--- a/medusa.conf.example
+++ b/medusa.conf.example
@@ -15,4 +15,7 @@ MDZ_REPO_METHOD=scp
 MDZ_REPOSITORY=zeus:/data/genomdata
 
 # Locally accessible directory holding data sets
-MDZ_DATADIR=/tmp
+MDZ_DATADIR=/data/genomdata
+
+# Service: viroblast
+MDZ_VIROBLAST_DIR=/var/www/viroblast
