Add QUICK_MODE config option
Ignore-this: 91c922e0c099f38d600a50707ad35190

darcs-hash:984a9c28de7ea683469ddea407d56e0c10b329f8

--- a/medusa.conf.example
+++ b/medusa.conf.example
@@ -3,6 +3,9 @@
 # Typically stored as /etc/medusa.conf or per user in $HOME/.medusa.conf
 # These variables can also be set directly in the shell
 
+# Whether to skip md5sum and other very time-consuming checks
+MDZ_QUICK_MODE=1
+
 # Where the medusa installation resides
 # should probably be something/lib/something
 MDZ_DIR=/var/lib/medusa
