Partial checkin moving to CAS - more many changes, more work (and testing) remaining
Ignore-this: 42af0b73ba9db8ce13694ae24ab1c282

darcs-hash:7a568acc94d33e7be659632a911d8afa6720cb83

--- a/medusa.conf.example
+++ b/medusa.conf.example
@@ -4,7 +4,7 @@
 # These variables can also be set directly in the shell (which will
 # override these settings)
 
-# Whether to skip md5sum and other very time-consuming checks:
+# Whether to skip checksums and other very time-consuming operations:
 MDZ_QUICK_MODE=1
 
 # Where the medusa installation resides
