Example config mathes debian/ubuntu defaults
Ignore-this: efd1ddb4951c08f6b1e71c4d543e6817

darcs-hash:b354cdd94f203a57e17cdd8d421bcd04129bc9b9

--- a/medusa.conf.example
+++ b/medusa.conf.example
@@ -23,7 +23,7 @@ MDZ_DATADIR=/data/
 
 # Service: website
 # Where to put the web presentation:
-MDZ_WEBSITE_DIR=/var/www
+MDZ_WEBSITE_DIR=/var/www/html
 MDZ_WEBSITE_DATA_PREFIX=data
 
 # Service: xapian search engine
@@ -33,4 +33,4 @@ MDZ_XAPIAN_DB=medusa
 
 # Service: viroblast
 # Where viroblast lives:
-MDZ_VIROBLAST_DIR=/var/www/viroblast
+MDZ_VIROBLAST_DIR=$MDZ_WEBSITE_DIR/viroblast
