--- a/medusa.conf.example
+++ b/medusa.conf.example
@@ -11,15 +11,8 @@ MDZ_QUICK_MODE=1
 # should probably be something/lib/something
 MDZ_DIR=/var/lib/medusa
 
-# A repository is a remote data store
-# Method to access the repository:
-MDZ_REPO_METHOD=scp
-
-# URL or other location of the upstream repository:
-MDZ_REPOSITORY=
-
 # Locally accessible directory holding data sets
-MDZ_DATADIR=/data/
+MDZ_DATADIR=/data/MDZ
 
 # Service: website
 # Where to put the web presentation:
